Prevent clipped event details by using innerWidth property

--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -1,5 +1,5 @@
 $size: 150px;
-
+//#f21550 #421d27
 
 html, body{
   padding: 0;
@@ -13,13 +13,14 @@ body{
 
 .calendar{
   width: ( $size + 1 ) * 7;
-  margin: 10px auto;
+  margin: 30px auto 150px auto;
 }
 
 .month{
   text-align: center;
   text-transform: uppercase;
   font-size: 35px;
+  margin-bottom: 20px;
 }
 
 .day-header{
@@ -83,10 +84,6 @@ p{
   display:block;
 }
 
-.event:hover{
-  z-index: 2;
-}
-
 .event{
   margin: 2px 1px;
   border-radius: 2px;
@@ -98,6 +95,7 @@ p{
   box-sizing: border-box;
   color:white;
   box-shadow: 0 5px 10px 0px rgba(0,0,0,.3);
+  background: rgba(255,0,0,1);
 
   white-space: nowrap;
   overflow:hidden;
@@ -109,22 +107,24 @@ p{
 }
 
 .event-detail{
-  width: 200px;
   background: white;
+  max-width: 300px;
+  //max-height:500px;
+  //background: white;
   box-shadow: 0 5px 10px 0px rgba(0,0,0,.3);
   border-radius:2px;
   overflow:hidden;
 }
 
 .event-detail-title{
+  background:navy;
   font-size: 20px;
-  background: red;
   color:white;
   padding: 10px;
   text-align:center;
   text-transform: capitalize;
 }
 
-.event-detail-body{
-  padding: 10px;
+.event-detail-body, .event-detail-dates{
+  margin: 15px 15px;
 }
